# darkplaces

./: .gitignore  .travis-script-xonotic.sh  .travis.yml  .valgrindrc  BSDmakefile  CMakeLists.txt  CREDITS.md  bih.c  bih.h  cap_avi.c  cap_lavc.c  cap_lavc.h  cap_ogg.c  cd_bsd.c  cd_linux.c  cd_shared.c  cd_win.c  cdaudio.h  cl_cmd.c  cl_collision.c  cl_demo.c  cl_dyntexture.c  cl_ents.c  cl_ents5.c  cl_ents_nq.c  cl_ents_qw.c  cl_input.c  cl_main.c  cl_parse.c  cl_parse.h  cl_particles.c  cl_protocol_basenq.h  cl_protocol_baseqw.h  cl_protocol_dpp7.c  cl_protocol_ext.h  cl_protocol_fq.c  cl_protocol_nq.c  cl_protocol_qw.c  cl_screen.c  cl_screen.h  (+188 more)
Android/: .gitignore  AndroidManifest.xml
Android/jni/: Application.mk
Android/jni/ogg/: Android.mk
Android/jni/src/: Android.mk
Android/jni/vorbis/: Android.mk
Android/src/org/xonotic/game/xonotic/: SDLActivity.java
cmake/: FindSDL2.cmake
dat/: desk.top
dpdefs/: csprogsdefs.qc  dpextensions.qc  menudefs.qc  progsdefs.qc  source_compare.pl
gui/: desk.top
inp/: desk.top
msc/: desk.top
net/: desk.top  netconn.c
snd/: desk.top
vfx/: desk.top
